[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/test/enemy/test-enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/WalkingEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 4.5 )

[node name="WalkingEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 5, 7 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 7 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Enemy" to="." method="_on_Enemy_area_entered"]
